--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Center Business Alliance</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: 'Hanken Grotesk';
+            src: url('fonts/HankenGrotesk-Regular.woff2') format('woff2'),
+                 url('fonts/HankenGrotesk-Regular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        body {
+            font-family: 'Hanken Grotesk', sans-serif;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="text-center">
-        <img src="/images/Lockup_Horizontal_Large_Blue.png" alt="Logo" class="mx-auto mb-4">
-        <p class="text-lg text-gray-700">Welcome to the White Center Business Alliance. We are dedicated to supporting local businesses and fostering community growth.</p>
+<body class="bg-gray-100 flex justify-center min-h-screen">
+    <div class="flex flex-col items-center max-w-6xl w-full px-4 mt-8">
+        <img src="images/Lockup_Horizontal_Large_Blue.png" alt="White Center Business Alliance Logo" class="w-1/2 mb-8">
+        <h2 class="text-2xl font-bold text-gray-600 mb-1 px-4 py-2">Our Mission</h2>
+        <p class="text-lg text-gray-700 text-center mb-8 px-4 py-1">To create a membership based network of businesses and individuals in White Center, Washington, designed to promote and protect the interests of member businesses and to uplift, unify and amplify the voices of our diverse community. This includes supporting new and existing businesses in the White Center business core and surrounding neighborhood, to advocate for and share resources that will help local businesses grow and thrive, and provide safe, fun spaces for all in our community.</p>
+        
+        <div class="flex flex-col md:flex-row gap-4 w-full">
+            <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
+                <h3 class="text-xl font-semibold mb-2">Join Us</h3>
+                <p class="text-gray-700 mb-4">Become a member of the White Center Business Alliance and help support our mission.</p>
+                <a href="join.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Join Now</a>
+            </div>
+            <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
+                <h3 class="text-xl font-semibold mb-2">Learn More</h3>
+                <p class="text-gray-700 mb-4">Find out more about what we do and how you can get involved.</p>
+                <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Learn More</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
