--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Join Us</h3>
                 <p class="text-gray-700 mb-4">Become a member of the White Center Business Alliance and help support our mission.</p>
-                <a href="join.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Join Now</a>
+                <a href="https://forms.gle/FY9yUb7VYHBWiWER8" class="bg-yellow-700 text-white px-4 py-2 rounded hover:bg-yellow-600">Join Now</a>
             </div>
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Learn More</h3>
                 <p class="text-gray-700 mb-4">Find out more about what we do and how you can get involved.</p>
-                <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Learn More</a>
+                <!-- <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Learn More</a> -->
             </div>
         </div>
         <div class="flex flex-col md:flex-row gap-4 w-full">
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
-                <h3 class="text-xl font-semibold mb-2">Calendar</h3>
-                <p class="text-gray-700 mb-4">Calendar of local events.</p>
-                <a href="join.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Calendar</a>
+                <h3 class="text-xl font-semibold mb-2">Events</h3>
+                <p class="text-gray-700 mb-4">Rat City Events Calendar</p>
+                <!-- <a href="join.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Calendar</a> -->
             </div>
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Member Directory</h3>
-                <p class="text-gray-700 mb-4">Directory of members.</p>
-                <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Members</a>
+                <p class="text-gray-700 mb-4">Directory of WCBA members.</p>
+                <!-- <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Members</a> -->
             </div>
         </div>
     </div>
