--- a/directory.html
+++ b/directory.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>White Center Business Alliance</title>
+    <!-- <link href="dist/styles.css" rel="stylesheet"> -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @font-face {
+            font-family: 'Hanken Grotesk';
+            src: url('fonts/HankenGrotesk-Regular.woff2') format('woff2'),
+                 url('fonts/HankenGrotesk-Regular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        body {
+            font-family: 'Hanken Grotesk', sans-serif;
+        }
+    </style>
+</head>
+<body class="bg-gray-100 flex justify-center min-h-screen">
+    <div class="flex flex-col items-center max-w-6xl w-full px-4 mt-8">
+        <img src="images/Lockup_Vertical_Large_NavyBlue.png" alt="White Center Business Alliance Logo" class="w-1/3 mb-8">
