added members directory

--- a/directory.html
+++ b/directory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Center Business Alliance</title>
     <!-- <link href="dist/styles.css" rel="stylesheet"> -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @font-face {
             font-family: 'Hanken Grotesk';
@@ -20,5 +20,19 @@
     </style>
 </head>
 <body class="bg-gray-100 flex justify-center min-h-screen">
-    <div class="flex flex-col items-center max-w-6xl w-full px-4 mt-8">
-        <img src="images/Lockup_Vertical_Large_NavyBlue.png" alt="White Center Business Alliance Logo" class="w-1/3 mb-8">
+    <div class="flex flex-col items-center max-w-12xl w-full px-4 mt-8">
+        <img src="images\Lockup_Horizontal_Large_NavyBlue.png" alt="White Center Business Alliance Logo" class="w-1/3 mb-8">
+        <h2 class="text-2xl font-bold text-gray-600 mb-1 px-4 py-2">Member Directory</h2>
+        <div class="flex flex-col items-left max-w-12xl px-4 mt-8">
+            <a href="https://www.facebook.com/latipicaoaxaquena" target="_blank" class="text-sky-600 text-xl font-semibold mb-2">La Típica Oaxaqueña</a>
+            <a href="https://wcteenprogram.org/" target="_blank" class="text-sky-600 text-xl font-semibold mb-2">White Center Teen Program</a>
+            <a href="https://www.becu.org/locations/white-center?utm_source=G&utm_medium=lpm&utm_campaign=service_neighborhoodfinancialcenters_ms1_other" target="_blank" class="text-sky-600 text-xl font-semibold mb-2">BECU White Center Neighborhood Financial Center</a>
+            <a href="https://misfitstrengthstudio.com/" target="_blank" class="text-sky-600 text-xl font-semibold mb-2">Misfit Strength Studio</a>
+            <a href="https://www.rideyourbike.com/" target="_blank"class="text-sky-600 text-xl font-semibold mb-2">Rat City Bikes</a>
+            <a href="https://bigmariosnewyorkpizza.com/" target="_blank" class="text-sky-600 text-xl font-semibold mb-2">Big Mario's Pizza - White Center</a>
+            <a href="https://thelumberyardbar.com" target="_blank"class="text-sky-600 text-xl font-semibold mb-2">The LumberYard Bar</a>
+            <a href="https://cartwheelvintage.com" target="_blank"class="text-sky-600 text-xl font-semibold mb-2">Cartwheel Vintage & Consign</a>
+        </div>
+    </div>
+</body>
+</html>
