--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Member Directory</h3>
                 <p class="text-gray-700 mb-4">Directory of WCBA members.</p>
-                <!-- <a href="learn-more.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Members</a> -->
+                <a href="directory.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Members</a>
             </div>
         </div>
     </div>
