--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Events</h3>
                 <p class="text-gray-700 mb-4">Rat City Events Calendar</p>
-                <!-- <a href="join.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Calendar</a> -->
+                <a href="events.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">View Calendar</a>
             </div>
             <div class="bg-gray-200 p-6 rounded-lg shadow-md flex-1">
                 <h3 class="text-xl font-semibold mb-2">Member Directory</h3>
